[gd_scene load_steps=8 format=3 uid="uid://m5mq8s0rddw3"]

[ext_resource type="Script" path="res://src/ui/in_game_texts/in_game_text.gd" id="1_5asi3"]
[ext_resource type="FontFile" uid="uid://cc0tw4kvqmrrp" path="res://assets/fonts/Anton-Regular.ttf" id="1_5688p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nn7fi"]
size = Vector2(112, 80)

[sub_resource type="Animation" id="Animation_hvslw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FloatingText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FloatingText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_rmymt"]
resource_name = "hide"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FloatingText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FloatingText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0qr3r"]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FloatingText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FloatingText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwche"]
_data = {
"RESET": SubResource("Animation_hvslw"),
"hide": SubResource("Animation_rmymt"),
"show": SubResource("Animation_0qr3r")
}

[node name="InGameText" type="Area2D"]
script = ExtResource("1_5asi3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(55, 40)
shape = SubResource("RectangleShape2D_nn7fi")

[node name="FloatingText" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_top = -20.0
offset_right = 40.0
offset_bottom = 5.0
theme_override_constants/line_spacing = -5
theme_override_fonts/font = ExtResource("1_5688p")
theme_override_font_sizes/font_size = 16
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fwche")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
